# bc-dcbor-pattern-rust

./: AGENTS.md  Cargo.toml  README.md  test_extra_data.rs  test_range_parsing.rs  test_syntax.rs
docs/: DCBORPatternSyntax.md  PatternSyntax.md  dcbor_patex.md
examples/: README.md  capture_pattern_demo.rs  date_pattern_demo.rs  date_pattern_verification.rs  dcbor_parse_integration_demo.rs  debug_array_matching.rs  debug_hang.rs  debug_parse.rs  digest_parsing_test.rs  format_demo.rs  map_constraints_demo.rs  map_pattern_demo.rs  null_pattern_demo.rs  simple_debug.rs  test_all_repeat_variants.rs  test_final_functionality.rs  test_new_apis.rs  test_number_matching.rs  test_number_syntax.rs  test_repeat_support.rs  test_sequence_functionality.rs
src/: debug_complex_pattern.rs  error.rs  format.rs  interval.rs  lib.rs  quantifier.rs  search_captures_fix_test.rs  test_search_issue.rs
tests/: array_capture_tests.rs  array_detailed_tests.rs  capture_detailed_tests.rs  capture_integration_tests.rs  debug_array_behavior.rs  debug_array_capture.rs  debug_array_detailed.rs  debug_capture.rs  debug_exact_count.rs  debug_map_capture.rs  debug_search_capture.rs  debug_tagged_capture.rs  debug_vm_navigation.rs  deduplication_tests.rs  digest_pattern_integration_tests.rs  infinity_integration_test.rs  map_capture_tests.rs  map_pattern_integration_tests.rs  parse_partial_tests.rs  parse_tests_meta.rs  parse_tests_value.rs  pattern_tests_meta.rs  pattern_tests_structure.rs  pattern_tests_value.rs  search_capture_tests.rs  test_advanced_nested_patterns.rs  test_array_comma_display.rs  (+16 more)
(+62 files in other folders)
