[package]
name = "dcbor-pattern"
version = "0.10.0"
edition = "2024"
description = "Pattern matcher for dCBOR"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-dcbor-pattern-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-dcbor-pattern"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
bc-components = "^0.31.0"
bc-tags = "^0.12.0"
bc-ur = "^0.19.0"
dcbor = { version = "^0.25.0", features = ["multithreaded"] }
dcbor-parse = "^0.10.0"
known-values = "^0.14.0"

regex = "^1.11.1"
hex = "^0.4.3"
thiserror = "^2.0"
logos = "0.15.0"

[dev-dependencies]
hex-literal = "^1.1.0"
indoc = "^2.0.0"
bc-rand = "^0.5.0"
anyhow = "^1.0.0"
